--- a/source/blog-post.erb
+++ b/source/blog-post.erb
@@ -1,15 +1,13 @@
 <% wrap_layout :layout do %>
   <article>
-    <h1>THis is a STATIC TITLE</h1>
+    <h1><%= current_article.title %></h1>
     <%= yield %>
   </article>
 
-  <footer>
-    <h2>Recent Article</h2>
-    <ol>
-      <% blog.articles[0...1].each do |article| %>
-        <li><%= link_to article.title, article %> <span><%= article.date.strftime('%b %e') %></span></li>
-      <% end %>
-    </ol>
-  </footer>
+  <nav>
+    <span class="meta-nav">Previous</span>
+    <% blog.articles[0...1].each do |article| %>
+      <%= link_to article.title, article %>
+    <% end %>
+  </nav>
 <% end %>
