--- a/source/layout.erb
+++ b/source/layout.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="main">
-      <aside class="">
+      <aside>
         <%= image_tag "philip.jpg" %>
         <%= link_to "Philip Joubert", "/" %>
 
@@ -30,7 +30,6 @@
       <div class="content">
         <%= yield %>
       </div>
-
     </div>
   </body>
 </html>
