--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,8 +2,10 @@
 
 ---
 
-<% page_articles.each_with_index do |article, i| %>
-  <ul>
-    <li><%= link_to article.title, article %></li>
-  </ul>
-<% end %>
+<article>
+  <% page_articles.each_with_index do |article, i| %>
+    <ul class="index">
+      <li><%= link_to article.title, article %></li>
+    </ul>
+  <% end %>
+</article>
