--- a/source/styles/main.css.scss
+++ b/source/styles/main.css.scss
@@ -5,7 +5,21 @@ html {
 }
 
 body {
-  background-color: #ff5959;
+  background-color: #ff6b6b;
+}
+
+body:before {
+    background-color: #ffe66d;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
+    content: "";
+    display: block;
+    height: 100%;
+    min-height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 29.4118%;
+    z-index: 0;
 }
 
 a,
@@ -51,23 +65,31 @@ article p, article a {
 
 aside {
   background-color: #ffe66d;
-  flex-basis: 23%;
-  min-width: 260px;
-  padding: 0 20px;
+  float: left;
+  margin-right: -100%;
+  max-width: 413px;
+  position: relative;
+  width: 29.4118%;
+  padding: 0 40px;
+  box-sizing: border-box;
+  position: fixed;
+  margin-top: 60px;
 }
 
 aside .bio {
-  
-  img {
-    display: block;
-  }
 
   p, a {
     font-size: 1.4rem;
   }
 
+  .home-nav {
+    margin-top: 10px;
+    text-align: center;
+    display: block;
+  }
+
   .home-nav a {
-    font-size: 20px;
+    font-size: 2.2rem;
     font-weight: 700;
     border-bottom: none;
   }
@@ -75,19 +97,16 @@ aside .bio {
   img {
     border-radius: 50%;
     max-width: 150px;
+    display: block;
+    margin: 0 auto;
   }
 }
 
-.main {
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-  margin: 0 auto;
-  min-height: 100vh;
-}
-
 .content {
-  width: 100%;
+  display: block;
+  float: left;
+  margin-left: 29.4118%;
+  width: 70.5882%;
 }
 
 article {
@@ -98,8 +117,8 @@ article {
 
 nav {
   padding: 40px 40px;
+  margin: 60px;
   background-color: #fff;
-  margin: 8.33%;
 
   a {
     font-size: 30px;
@@ -127,4 +146,5 @@ b , strong {
 }
 .index a {
   font-size: 22px;
+  font-weight: 700;
 }
