--- a/source/articles/test-post.html.md.erb
+++ b/source/articles/test-post.html.md.erb
@@ -8,11 +8,11 @@ For years people have been talking about diets. Atkins. Keto. Intermittent fasti
 
 Recently people have also started to also talk about information diets. “Reading Twitter or BuzzFeed all day feels bad”, they say. Read a long novel. Spend more time outdoors. With real people. Get a life.
 
-Feeding your mind and body right is important. But changing behaviors is a bitch. You’re doing whatever you’re doing in response to a feedback loop. We make the mistake of assuming that willpower alone will break the chain. It won’t. Mood (or willpower) is very transient. Unless you crack your own algorithm, you’ll fall right back into old habits once it fades.
+Feeding your mind and <span class="post-magicquote">body right is important</span>. But changing behaviors is a bitch. You’re doing whatever you’re doing in response to a feedback loop. We make the mistake of assuming that willpower alone will break the chain. It won’t. Mood (or willpower) is very transient. Unless you crack your own algorithm, you’ll fall right back into old habits once it fades.
 
 The needle mover [test](https://www.offerzen.com) for really changing your life is your environment. Living in the wrong city can drastically increase your odds of developing diabetes. People surrounded by runners start running themselves. The key to getting whatever you want (becoming happier, becoming smarter, quitting smoking, working more, working less, etc) is identifying an environment that has those virtues and immersing yourself in it. But how? “Environment” is just code for a collection of other people, places or things that you experience without applying continuous effort.
 
-For example: if you don’t want to eat junk food, remove it from your home. Live far away from a store that procures it. If you want to become more productive, seek out the most productive people you know. Find reasons to be around them “accidentally”. Go work with them! If you can’t, find a hobby you share with them. Universities are the prime example of spatial environments, often morphing student personalities as a byproduct of their campus.
+For example: if you don’t want to eat junk food, <span class="post-magicquote">remove it from your home</span>. Live far away from a store that procures it. If you want to become more productive, seek out the most productive people you know. Find reasons to be around them “accidentally”. Go work with them! If you can’t, find a hobby you share with them. Universities are the prime example of spatial environments, often morphing student personalities as a byproduct of their campus.
 
 
 
