--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,10 @@
     <%= stylesheet_link_tag :main, :media => "screen" %>
     <title><%= current_article.title + ' - ' unless current_article.nil? %>Philip Joubert <%= "- Startups, surfing and meditation" unless current_article.present? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
+    <%= javascript_include_tag 'jquery-3.3.1' %>
+    <%= javascript_include_tag 'magicquote' %>
   </head>
+
   <body>
     <div class="main">
       <aside>
