--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag :main, :media => "screen" %>
+    <%= favicon_tag 'images/favicon.png' %>
     <title><%= current_article.title + ' - ' unless current_article.nil? %>Philip Joubert <%= "- Startups, surfing and meditation" unless current_article.present? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <%= javascript_include_tag 'jquery-3.3.1' %>
