--- a/source/styles/main.css.scss
+++ b/source/styles/main.css.scss
@@ -45,22 +45,33 @@ a:hover, a:focus {
   color: rgba( 34, 49, 63, 0.7);
 }
 
-article h1 {
-  margin: 0;
-  font-size: 3.9rem;
-  line-height: 1.2;
-  margin-bottom: 3rem;
-}
+article {
 
-article p, article a {
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto;
-  word-wrap: break-word;
-  line-height: 1.6;
-  margin: 0 0 30px 0;
-  font-size: 1.7rem;
+  p, a, li {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+    word-wrap: break-word;
+    line-height: 1.6;
+    font-size: 1.7rem;
+  }
+
+  p {
+    margin: 0 0 30px 0;
+  }
+
+  h1 {
+    margin: 0;
+    font-size: 3.9rem;
+    line-height: 1.2;
+    margin-bottom: 3rem;
+  }
+
+  blockquote {
+    font-style: italic;
+  }
+
 }
 
 aside {
@@ -121,12 +132,18 @@ nav {
   background-color: #fff;
 
   a {
-    font-size: 30px;
+    font-size: 2.5rem;
+    border-bottom: none;
+    font-weight: 700;
   }
 
   .meta-nav {
     display: block;
     text-transform: uppercase;
+    color: rgba( 34, 49, 63, 0.7);
+    font-weight: 700;
+    font-size: 1.3rem;
+    letter-spacing: 0.07rem;
   }
 }
 
