--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,21 +16,24 @@
     <div class="main">
       <aside>
         <div class="bio">
-          <%= image_tag "philip.jpg" %>
+          <% link_to "/" do %>
+            <%= image_tag "philip.jpg" %>
+          <% end %>
           <span class="home-nav"><%= link_to "Philip Joubert", "/" %></span>
-
-          <p>
-            Welcome to my site! I’m the co-founder at <%= link_to "OfferZen", "https://www.offerzen.com/" %>, focused on AI. I’m also the co-founder of AI Grant, a distributed AI research lab.
-          </p>
-          <p>
-            Previously I was a Director at Apple via the acquisition of Cue, which I co-founded.
-          </p>
-          <p>
-            In my spare time, I love long distance running and long distance reading. Ideally with a strong cup of overpriced coffee.
-          </p>
-          <p>
-            I love helping people around the world with their projects. Find me via email or Twitter <%= link_to "@philipjoubert", "https://twitter.com/PhilipJoubert" %>.
-          </p>
+          <div class="about-me">
+            <p>
+              Welcome to my site! I’m the co-founder at <%= link_to "OfferZen", "https://www.offerzen.com/" %>, a talent marketplace for makers. I'm also a co-founder of <%= link_to "Root", "https://root.co.za/" %>, a fintech platform. 
+            </p>
+            <p>
+              I lived in Silicon Valley for a while but now I'm back in Cape Town, South Africa. It's pretty sweet here.
+            </p>
+            <p>
+              My philosophy about surfing is that if you're not wiping out some of the time you're not trying hard enough. I wipe out all the time.
+            </p>
+            <p>
+              Find me on Twitter <%= link_to "@philipjoubert", "https://twitter.com/PhilipJoubert" %>.
+            </p>
+          </div>
         </div>
       </aside>
       <div class="content">
