--- a/source/styles/main.css.scss
+++ b/source/styles/main.css.scss
@@ -35,6 +35,10 @@ textarea {
   line-height: 1.6;
 }
 
+b , strong {
+  font-weight: 700;
+}
+
 a {
   text-decoration: none;
   border-bottom: 1px solid #22313f;
@@ -46,6 +50,9 @@ a:hover, a:focus {
 }
 
 article {
+  background-color: #fff;
+  padding: 60px;
+  margin: 60px;
 
   p, a, li {
     -webkit-hyphens: auto;
@@ -61,15 +68,23 @@ article {
     margin: 0 0 30px 0;
   }
 
+  ul, ol {
+    padding-left: 20px;
+  }
+
   h1 {
     margin: 0;
-    font-size: 3.9rem;
+    font-size: 3rem;
     line-height: 1.2;
     margin-bottom: 3rem;
   }
 
   blockquote {
     font-style: italic;
+  }
+
+  img {
+    max-width: 100%;
   }
 
 }
@@ -120,12 +135,6 @@ aside .bio {
   width: 70.5882%;
 }
 
-article {
-  background-color: #fff;
-  padding: 60px;
-  margin: 60px;
-}
-
 nav {
   padding: 40px 40px;
   margin: 60px;
@@ -147,21 +156,95 @@ nav {
   }
 }
 
-b , strong {
-  font-weight: 700;
-}
-
 .index {
-  ul {
-    padding: 0;
-    margin: 0;
-  }
+  padding: 0;
+  margin: 0;
   li {
     list-style-type: none;
     margin: 20px;
   }
+  a {
+    font-size: 22px;
+    font-weight: 700;
+  }
 }
-.index a {
-  font-size: 22px;
-  font-weight: 700;
+
+
+@media all and (max-width: 960px) {
+  aside {
+    max-width: none;
+    float: none;
+    width: 100%;
+    position: relative;
+    margin: 0;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.1);
+  }
+
+  .content {
+    margin-left: 0;
+    width: 100%;
+    float: none;
+  }
+
+  body:before {
+    display: none;
+  }
+
+  aside .bio {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    img {
+      width: 80px;
+    }
+    .about-me {
+      display: none;
+    }
+  }
+}
+@media all and (max-width: 736px) {
+  article, nav {
+    margin: 5%;;
+    padding: 7%;
+  }
+
+  article {
+    h1 {
+      font-size: 2.8rem;
+      margin-bottom: 2.8rem;
+    }
+  }
+
+  nav {
+    a {
+      font-size: 2rem;
+    }
+  }
+}
+
+@media all and (max-width: 620px) {
+
+  article {
+    margin: 0;
+    padding: 6%;
+    p, a, li {
+      font-size: 1.6rem;
+    }
+    p:last-child {
+      margin-bottom:0;
+    }
+
+    h1 {
+      font-size: 2.4rem;
+      margin-bottom: 2.4rem;
+    }
+  }
+  
+  nav {
+    border-top: 1px solid rgba(51, 51, 51, 0.1);
+    padding: 25px 25px;
+    margin: 0;
+    a {
+      font-size: 1.8rem;
+    }
+  }
 }
