removed test article

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,13 +22,13 @@
           <span class="home-nav"><%= link_to "Philip Joubert", "/" %></span>
           <div class="about-me">
             <p>
-              Welcome to my site! I’m the co-founder at <%= link_to "OfferZen", "https://www.offerzen.com/" %>, a talent marketplace for makers. I'm also a co-founder of <%= link_to "Root", "https://root.co.za/" %>, a fintech platform. 
+              Welcome to my site! I’m the co-founder at <%= link_to "OfferZen", "https://www.offerzen.com/" %>, a talent marketplace for makers. I'm also the co-founder of <%= link_to "Root", "https://root.co.za/" %>, a fintech platform. 
             </p>
             <p>
               I lived in Silicon Valley for a while but now I'm back in Cape Town, South Africa. It's pretty sweet here.
             </p>
             <p>
-              My philosophy about surfing is that if you're not wiping out some of the time you're not trying hard enough. I wipe out all the time.
+              My philosophy on surfing is that if you're not wiping out some of the time you're not trying hard enough. I wipe out all the time.
             </p>
             <p>
               Find me on Twitter <%= link_to "@philipjoubert", "https://twitter.com/PhilipJoubert" %>.
