updated blog post

--- a/source/articles/example-article.html.md.erb
+++ b/source/articles/example-article.html.md.erb
@@ -1,6 +1,174 @@
 ---
-title: Example Article
-date: 2018-05-02 13:38 SAST
+title: The 21 Startup Books that influenced me most
+date: 2018-05-11 13:38 SAST
 ---
 
-This is an example article. You probably want to delete it and write your own articles!
+This year I set a goal to read 52 books.
+
+I spend a significant amount of time researching books before I read them. Here’s a list of the top 21 books that have had the biggest influence on how I think about startups.
+
+A few years ago I noticed that I was reading much less. I usually spend 12 hours staring at a computer most days, so I found that I often don't want to spend more time staring at a book. Instead I listen to audiobooks. Initially I found it extremely difficult to listen to an audiobooks. I find myself thinking about something completely different and realize I had stopped listening for a few minutes. I've found that listening to an audiobook is similar to meditation - the more I did it the easier it became. 
+
+Once I became comfortable I could increase the narration speed. Initially I cranked it up to 1.25x speed and felt a little rush. Over time that felt slow and I started increasing books to 1.5x. It's now been 3 years since I started listening to audiobooks. For a while I went up to 2.5x but I felt like my retention was suffering, so now I listen to most books on somewhere between 1.8x - 2.2x speed. It's very comfortable and I feel like my retention matches what it would be if I read the book normally. This is the killer feature of audiobooks! 
+
+### [High Output Management - Andrew Grove](https://www.amazon.com/High-Output-Management-Andrew-Grove/dp/0679762884)
+
+**What is it about?** 
+
+**Why is this interesting?** This is the first book you should read as a team lead and one you’ll find yourself coming back to often. Andy Grove is considered one of the greatest manager ever in Silicon Valley and this book gives a solid overview of what it means to be a good manager.
+
+**A bit of backstory:**
+
+### [The Goal - Eliyahu Goldratt](https://www.amazon.com/Goal-Process-Ongoing-Improvement/dp/0884271951)
+
+**What is it about?** 
+
+**Why is this interesting?** A great deal of the way we think about throughput vs. efficiency is based off The Goal. You’ll find this book useful when thinking about what cadence your team should have, what is useful work and how to get more done in less time.
+
+**A bit of backstory:**
+
+### [Modern Monopolies - Alex Moazed](https://www.amazon.com/Modern-Monopolies-Dominate-Century-Economy-ebook/dp/B017RC8CBC)
+
+**What is it about?** 
+
+**Why is this interesting?** This is the best book on how online marketplaces work. There are a lot of non-intuitive aspects of marketplaces that make them very different from traditional linear businesses. 
+
+**A bit of backstory:**
+
+### [Scaling Up - Verne Harnish](https://www.amazon.com/Scaling-Up-Companies-Rockefeller-Habits/dp/0986019526)
+**What is it about?**
+
+**Why is this interesting?**  We’re no longer an early-stage startup and many of the processes/tactics we used until now have to be rethought. We’re using this book as the framework for making the transition.
+
+**A bit of backstory:**
+
+### [Good Strategy Bad Strategy - Richard Rumelt](https://www.amazon.com/Good-Strategy-Bad-Difference-Matters-ebook/dp/B004J4WKEC)
+
+**What is it about?**
+
+**Why is this interesting?** Before making any strategic decisions you’ll want to read this book and write out a strategy kernel.
+
+**A bit of backstory:**
+
+### [From Impossible To Inevitable - Aaron Ross & Jason Lemkin](https://www.amazon.com/Impossible-Inevitable-Hyper-Growth-Companies-Predictable/dp/1536692700)
+
+**What is it about?** This book gives you a brilliant overview of B2B sales strategy and execution. 
+
+**Why is this interesting?** 
+
+**A bit of backstory:** Saastr and Predictable Revenue.
+
+### [Who: A Method for Hiring - Geoff Smart](https://www.amazon.com/Who-Geoff-Smart/dp/0345504194)
+Read this before you hire anyone - it’s the best book on hiring methodology. We’ve based our hiring process off concepts in this book and it helped us change our hiring process from an art to a science (more or less).
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Crucial Conversations - Kerry Patterson](https://www.amazon.com/Crucial-Conversations-Talking-Stakes-Second/dp/1469266822)
+If you need to have a tough conversation with anyone you’ll want to reference this book. 
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [The Lean Startup - Eric Ries](https://www.amazon.com/Lean-Startup-Entrepreneurs-Continuous-Innovation/dp/0307887898)
+Lean Startup is considered standard startup canon and gives a great overview of the meta of the startup processes and finding product-market fit. I reread it every now and then to get into the right iterative mindset.
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [The Hard Thing About Hard Things - Ben Horowitz](https://www.amazon.com/Hard-Thing-About-Things-Building/dp/0062273205)
+While there is some advice in the book around management, the main value I found was inspiration. Getting an inside view of a startups journey helps you to realize that all the crazy stuff we go through is normal.
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Zero to One- Peter Thiel](https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296/)
+Zero to One centers on Thiel’s philosophy of competition and his approach to building a startup. It’s light on specific tactics so don’t expect to walk away with immediate improvements to the way you do things. Rather, the book will help you become a better thinker.
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Actionable Gamification - Yu-Kai Chou](https://www.amazon.com/Actionable-Gamification-Beyond-Points-Leaderboards/dp/1511744049/)
+If you want an overview of what motivates people to do stuff then check out this book. This is super useful for external aspects like community and product design, as well as getting your team more engaged. Another great book that tackles the topic from a different angle, albeit a bit more tactically, is Influence: The Psychology of Persuasion. 
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Traction - Gabriel Weinberg & Justin Mares](https://www.amazon.com/Traction-Startup-Achieve-Explosive-Customer/dp/1591848369)
+Lean Startup is focused on getting to product-market fit while Traction picks up after that and focuses on acquisition. The book gives a complete overview of growth channels available to startups and a framework for thinking about them. Regardless of where in the business you are you need to have an understand of growth levers - as Paul Graham says, “Startup = growth”.
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Sprint - Jake Knapp, John Zeratsky & Braden Kowitz](https://www.amazon.com/Sprint-Solve-Problems-Test-Ideas/dp/150112174X)
+Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull off. Sprint gives you a great framework for consistently getting it right. If you want to tackle a big problem that involves some building you’ll want to reference this - even if you don’t plan on following the whole process.
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Simplify - Richard Koch & Greg Lockwood](https://www.amazon.com/gp/product/B0151YR4TY/)
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Leadership: The Care and Growth Model - Etsko Schuitema](https://www.amazon.com/Leadership-Growth-Model-Etsko-Schuitema-ebook/dp/B00GUTRAIA)
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:** The book and it's concepts were introduced to me by one of my friends, Francois Hugo. He also wrote the foreward for the book.
+
+### [The Innovator's Dilemma - Clayton M. Christensen](https://www.amazon.com/Innovators-Dilemma-Technologies-Management-Innovation/dp/1633691780)
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [The Fountainhead - Ayn Rand](https://www.amazon.com/Fountainhead-Ayn-Rand/dp/0452273331)
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Four Steps to the Epiphany - Steve Blank](https://www.amazon.com/Four-Steps-Epiphany-Steve-Blank/dp/0989200507)
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [The Beginning on Infinity - David Deutsch](https://www.amazon.com/gp/product/0670022756)
+**What is it about?**
+
+**Why is this interesting?** 
+
+**A bit of backstory:**
+
+### [Various essays by Paul Graham](http://paulgraham.com/articles.html)
+http://paulgraham.com/ds.html
+http://paulgraham.com/growth.html
+http://paulgraham.com/talk.html
+http://paulgraham.com/really.html
+http://paulgraham.com/startuplessons.html
+http://paulgraham.com/love.html
+
