updated file name

--- a/source/articles/21-startup-books-that had-the-biggest-influence-on-me.html.md.erb
+++ b/source/articles/21-startup-books-that had-the-biggest-influence-on-me.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: The 21 Startup Books that influenced me most
+title: 21 Startup Books that had the biggest influence on me
 date: 2018-05-11 13:38 SAST
 ---
 
