added google analytics

--- a/source/articles/21-startup-books-that had-the-biggest-influence-on-me.html.md.erb
+++ b/source/articles/21-startup-books-that had-the-biggest-influence-on-me.html.md.erb
@@ -7,6 +7,8 @@ This year I set a goal to read 52 books.
 
 I spend a significant amount of time researching books before I read them. Here’s a list of the top 21 books that have had the biggest influence on how I think about startups.
 
+Our mission at OfferZen is to unlock human potential and that starts with our team. 
+
 A few years ago I noticed that I was reading much less. I usually spend 12 hours staring at a computer most days, so I found that I often don't want to spend more time staring at a book. Instead I listen to audiobooks. Initially I found it extremely difficult to listen to an audiobooks. I find myself thinking about something completely different and realize I had stopped listening for a few minutes. I've found that listening to an audiobook is similar to meditation - the more I did it the easier it became. 
 
 Once I became comfortable I could increase the narration speed. Initially I cranked it up to 1.25x speed and felt a little rush. Over time that felt slow and I started increasing books to 1.5x. It's now been 3 years since I started listening to audiobooks. For a while I went up to 2.5x but I felt like my retention was suffering, so now I listen to most books on somewhere between 1.8x - 2.2x speed. It's very comfortable and I feel like my retention matches what it would be if I read the book normally. This is the killer feature of audiobooks! 
