--- a/source/styles/main.css.scss
+++ b/source/styles/main.css.scss
@@ -5,11 +5,11 @@ html {
 }
 
 body {
-  background-color: #E55934;
+  background-color: #fff;
 }
 
 body:before {
-    background-color: #FDE74C;
+    background-color: #1d1e1f;
     box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
     content: "";
     display: block;
@@ -51,8 +51,8 @@ a:hover, a:focus {
 
 article {
   background-color: #fff;
-  padding: 60px;
-  margin: 60px;
+  padding: 0 50px 50px 50px;
+  margin: 50px;
 
   p, a, li {
     -webkit-hyphens: auto;
@@ -99,12 +99,14 @@ article {
 
   img {
     max-width: 100%;
+    margin: 0 auto;
+    display: block;
   }
 
 }
 
 aside {
-  background-color: #FDE74C;
+  background-color: #1d1e1f;
   float: left;
   margin-right: -100%;
   max-width: 413px;
@@ -120,6 +122,7 @@ aside .bio {
 
   p, a {
     font-size: 1.4rem;
+    color: #fff;
   }
 
   .home-nav {
@@ -150,9 +153,8 @@ aside .bio {
 }
 
 nav {
-  padding: 40px 40px;
-  margin: 60px;
-  background-color: #fff;
+  padding: 40px 100px;
+  border-top: 1px solid rgba(51, 51, 51, 0.1);
 
   a {
     font-size: 2.5rem;
@@ -216,8 +218,11 @@ nav {
   }
 }
 @media all and (max-width: 736px) {
-  article, nav {
-    margin: 5%;;
+  article {
+    margin: 5%;
+  }
+
+  nav {
     padding: 5%;
   }
 
@@ -254,7 +259,6 @@ nav {
   }
   
   nav {
-    border-top: 1px solid rgba(51, 51, 51, 0.1);
     padding: 25px 25px;
     margin: 0;
     a {
