--- a/source/articles/21-startup-books-that-changed-the-way-I-think.html.md.erb
+++ b/source/articles/21-startup-books-that-changed-the-way-I-think.html.md.erb
@@ -5,7 +5,7 @@ date: 2018-05-09 13:38 SAST
 
 Reading books is my favourite way to level up. A good book is the closest thing we have to uploading information straight into our brain. It makes sense why - authors compress years of research and thinking into a book which takes you only a few hours to read.
 
-I try to read as much as possible - averaging at least one book each week. It's had a strange effect on how I think: When I encounter problems I find myself flipping through a mental library of books to find solutions.
+I try to read as much as possible - averaging at least one book each week. It's had a strange effect on how I think: When I encounter problems I find myself flipping through a mental library of books. I can't always remember the exact solutions but I at least know where to go look for answers.
 
 A lot of people at [OfferZen](https://www.offerzen.com/) have started reading startup books and I often find myself giving them recommendations. So recently I decided to review all the startup books I've ever read and compile a list of my favourite ones. I ended up with this list of 21 books!
 
@@ -15,11 +15,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/high-output-management.jpg" %>
 <% end %>
 
-**What is it about?** 
+This is the first book you should read as a team lead and one you’ll find yourself coming back to often. Andy Grove is considered one of the greatest manager ever in Silicon Valley and this book gives a solid overview of what it means to be a good manager.
 
-**Why is this interesting?** This is the first book you should read as a team lead and one you’ll find yourself coming back to often. Andy Grove is considered one of the greatest manager ever in Silicon Valley and this book gives a solid overview of what it means to be a good manager.
-
-**A bit of backstory:**
+Introduces concepts like 1:1's, which is the foundation for management at OfferZen.
 
 ### [The Goal - Eliyahu Goldratt](https://www.amazon.com/Goal-Process-Ongoing-Improvement/dp/0884271951)
 
@@ -27,11 +25,7 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/the-goal.jpg" %>
 <% end %>
 
-**What is it about?** 
-
-**Why is this interesting?** A great deal of the way we think about throughput vs. efficiency is based off The Goal. You’ll find this book useful when thinking about what cadence your team should have, what is useful work and how to get more done in less time.
-
-**A bit of backstory:**
+A great deal of the way we think about throughput vs. efficiency is based off The Goal. You’ll find this book useful when thinking about what cadence your team should have, what is useful work and how to get more done in less time.
 
 ### [Modern Monopolies - Alex Moazed](https://www.amazon.com/Modern-Monopolies-Dominate-Century-Economy-ebook/dp/B017RC8CBC)
 
@@ -39,11 +33,7 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/modern-monopolies.jpg" %>
 <% end %>
 
-**What is it about?** 
-
-**Why is this interesting?** This is the best book on how online marketplaces work. There are a lot of non-intuitive aspects of marketplaces that make them very different from traditional linear businesses. 
-
-**A bit of backstory:**
+This is the best book on how online marketplaces work. There are a lot of non-intuitive aspects of marketplaces that make them very different from traditional linear businesses. 
 
 ### [Scaling Up - Verne Harnish](https://www.amazon.com/Scaling-Up-Companies-Rockefeller-Habits/dp/0986019526)
 
@@ -51,11 +41,7 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/scaling-up.jpg" %>
 <% end %>
 
-**What is it about?**
-
-**Why is this interesting?**  We’re no longer an early-stage startup and many of the processes/tactics we used until now have to be rethought. We’re using this book as the framework for making the transition.
-
-**A bit of backstory:**
+We’re no longer an early-stage startup and many of the processes/tactics we used until now have to be rethought. We’re using this book as the framework for making the transition.
 
 ### [Good Strategy Bad Strategy - Richard Rumelt](https://www.amazon.com/Good-Strategy-Bad-Difference-Matters-ebook/dp/B004J4WKEC)
 
@@ -63,11 +49,7 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/good-strategy-bad-strategy.jpg" %>
 <% end %>
 
-**What is it about?**
-
-**Why is this interesting?** Before making any strategic decisions you’ll want to read this book and write out a strategy kernel.
-
-**A bit of backstory:**
+Before making any strategic decisions you’ll want to read this book and write out a strategy kernel.
 
 ### [From Impossible To Inevitable - Aaron Ross & Jason Lemkin](https://www.amazon.com/Impossible-Inevitable-Hyper-Growth-Companies-Predictable/dp/1536692700)
 
@@ -75,11 +57,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/from-impossible-to-inevitable.jpg" %>
 <% end %>
 
-**What is it about?** This book gives you a brilliant overview of B2B sales strategy and execution. 
+This book gives you a brilliant overview of B2B sales strategy and execution. 
 
-**Why is this interesting?** 
-
-**A bit of backstory:** Saastr and Predictable Revenue.
+Jason Lemkin is the founder of [SaaStr](https://www.saastr.com/). If you want a playbook for B2B lead generation it's also worth checking the duo's previous book, [Predictable Revenue](https://www.amazon.com/Predictable-Revenue-Business-Practices-Salesforce-com/dp/B00ENFXJ0G).
 
 ### [Who: A Method for Hiring - Geoff Smart](https://www.amazon.com/Who-Geoff-Smart/dp/0345504194)
 
@@ -87,9 +67,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/who.jpg" %>
 <% end %>
 
-**What is it about?** Read this before you hire anyone - it’s the best book on hiring methodology. We’ve based our hiring process off concepts in this book and it helped us change our hiring process from an art to a science (more or less).
+Read this before you hire anyone - it’s the best book on hiring methodology. We’ve based our hiring process off concepts in this book and it helped us change our hiring process from an art to a science (more or less).
 
-**Why is this interesting?** 
+**Bonus:** Check out [how OfferZen hires](https://www.offerzen.com/blog/how-offerzen-hires) to see how we applied the concepts from Who.
 
 ### [Crucial Conversations - Kerry Patterson](https://www.amazon.com/Crucial-Conversations-Talking-Stakes-Second/dp/1469266822)
 
@@ -97,9 +77,7 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/crucial-conversations.jpg" %>
 <% end %>
 
-**What is it about?** If you need to have a tough conversation with anyone you’ll want to reference this book. 
-
-**Why is this interesting?** 
+If you need to have a tough conversation with anyone you’ll want to reference this book. 
 
 ### [The Lean Startup - Eric Ries](https://www.amazon.com/Lean-Startup-Entrepreneurs-Continuous-Innovation/dp/0307887898)
 
@@ -107,9 +85,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/lean-startup.jpg" %>
 <% end %>
 
-**What is it about?** 
+Lean Startup is considered standard startup canon and gives a great overview of the meta of the startup processes and finding product-market fit. I reread it every now and then to get into the right iterative mindset.
 
-**Why is this interesting?** Lean Startup is considered standard startup canon and gives a great overview of the meta of the startup processes and finding product-market fit. I reread it every now and then to get into the right iterative mindset.
+Eric was actually a student in Steve Blank's class. Most of the ideas in the lean startup are based on the customer development methodology that Steve developed.
 
 ### [The Hard Thing About Hard Things - Ben Horowitz](https://www.amazon.com/Hard-Thing-About-Things-Building/dp/0062273205)
 
@@ -117,11 +95,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/the-hard-thing-about-hard-things.jpg" %>
 <% end %>
 
-**What is it about?** While there is some advice in the book around management, the main value I found was inspiration. Getting an inside view of a startups journey helps you to realize that all the crazy stuff we go through is normal.
+While there is some advice in the book around management, the main value I found was inspiration. Getting an inside view of a startups journey helps you to realize that all the crazy stuff we go through is normal.
 
-**Why is this interesting?** 
-
-**A bit of backstory:**
+**Bonus:** Check out the talk Ben did on [culture](https://www.youtube.com/watch?v=YVVick2kf8c).
 
 ### [Zero to One- Peter Thiel](https://www.amazon.com/Zero-One-Notes-Startups-Future/dp/0804139296/)
 
@@ -129,11 +105,7 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/zero-to-one.jpg" %>
 <% end %>
 
-**What is it about?** Zero to One centers on Thiel’s philosophy of competition and his approach to building a startup. It’s light on specific tactics so don’t expect to walk away with immediate improvements to the way you do things. Rather, the book will help you become a better thinker.
-
-**Why is this interesting?** 
-
-**A bit of backstory:** 
+Zero to One centers on Thiel’s philosophy of competition and his approach to building a startup. It’s light on specific tactics so don’t expect to walk away with immediate improvements to the way you do things. Rather, the book will help you become a better thinker.
 
 ### [Actionable Gamification - Yu-Kai Chou](https://www.amazon.com/Actionable-Gamification-Beyond-Points-Leaderboards/dp/1511744049/)
 
@@ -141,9 +113,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/actionable-gamification.jpg" %>
 <% end %>
 
-**What is it about?** If you want an overview of what motivates people to do stuff then check out this book. The book is based on Chou's Octalysis framework - which despite the ridiculous name is actually really good.
+If you want an overview of what motivates people to do stuff then check out this book. The book is based on Chou's Octalysis framework - which despite the ridiculous name is actually really good.
 
-**Why is this interesting?** This is super useful for external aspects like community and product design, as well as getting your team more engaged.
+This is super useful for external aspects like community and product design, as well as getting your team more engaged.
 
 ### [Traction - Gabriel Weinberg & Justin Mares](https://www.amazon.com/Traction-Startup-Achieve-Explosive-Customer/dp/1591848369)
 
@@ -151,11 +123,9 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/traction.jpg" %>
 <% end %>
 
-**What is it about?** Traction picks up after that and focuses on acquisition. The book gives a complete overview of growth channels available to startups and a framework for thinking about them. Regardless of where in the business you are you need to have an understand of growth levers - as Paul Graham says, “Startup = growth”.
+Traction picks up after that and focuses on acquisition. The book gives a complete overview of growth channels available to startups and a framework for thinking about them. Regardless of where in the business you are you need to have an understand of growth levers - as Paul Graham says, “Startup = growth”.
 
-**Why is this interesting?** 
-
-**A bit of backstory:**
+The book talks about a bullseye framework, which feels quite underdeveloped. For another take on growth frameworks I recommend checking out [Hacking Growth](https://www.amazon.com/Hacking-Growth-Fastest-Growing-Companies-Breakout/dp/045149721X) by Sean Ellis, who was the guy that designed the Dropbox referral program.
 
 ### [Sprint - Jake Knapp, John Zeratsky & Braden Kowitz](https://www.amazon.com/Sprint-Solve-Problems-Test-Ideas/dp/150112174X)
 
@@ -164,11 +134,6 @@ A lot of people at [OfferZen](https://www.offerzen.com/) have started reading st
 <% end %>
 
 Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull off. Sprint gives you a great framework for consistently getting it right. If you want to tackle a big problem that involves some building you’ll want to reference this - even if you don’t plan on following the whole process.
-**What is it about?**
-
-**Why is this interesting?** 
-
-**A bit of backstory:**
 
 ### [Simplify - Richard Koch & Greg Lockwood](https://www.amazon.com/gp/product/B0151YR4TY/)
 
@@ -176,11 +141,9 @@ Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull 
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/simplify.jpg" %>
 <% end %>
 
-**What is it about?**
+Price simplifiers and proposition simplifiers
 
-**Why is this interesting?** 
-
-**A bit of backstory:**
+It's also worth checking out [Michael Porter](https://www.goodreads.com/author/list/57611.Michael_E_Porter), who has a similar framework for developing strategic positioning.
 
 ### [Leadership: The Care and Growth Model - Etsko Schuitema](https://www.amazon.com/Leadership-Growth-Model-Etsko-Schuitema-ebook/dp/B00GUTRAIA)
 
@@ -188,11 +151,9 @@ Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull 
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/leadership-care-and-growth.jpg" %>
 <% end %>
 
-**What is it about?**
+This is the best book you've never heard of.
 
-**Why is this interesting?** 
-
-**A bit of backstory:** The book and it's concepts were introduced to me by one of my friends, Francois Hugo. He also wrote the foreward for the book.
+The book and it's concepts were introduced to me by one of my friends, Francois Hugo. He also wrote the foreward for the book.
 
 ### [The Innovator's Dilemma - Clayton M. Christensen](https://www.amazon.com/Innovators-Dilemma-Technologies-Management-Innovation/dp/1633691780)
 
@@ -200,11 +161,8 @@ Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull 
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/the-innovators-dilemma.jpg" %>
 <% end %>
 
-**What is it about?**
+Why it's so hard for large companies to innovate.
 
-**Why is this interesting?** 
-
-**A bit of backstory:**
 
 ### [The Fountainhead - Ayn Rand](https://www.amazon.com/Fountainhead-Ayn-Rand/dp/0452273331)
 
@@ -212,9 +170,7 @@ Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull 
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/the-fountainhead.jpg" %>
 <% end %>
 
-**What is it about?**
-
-**Why is this interesting?** 
+This book is massive. It's also worth reading [Atlas Shrugged](https://www.amazon.com/Atlas-Shrugged-Ayn-Rand/dp/0451191145), although I think it's a harder read than The Fountainhead.
 
 ### [Four Steps to the Epiphany - Steve Blank](https://www.amazon.com/Four-Steps-Epiphany-Steve-Blank/dp/0989200507)
 
@@ -222,11 +178,7 @@ Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull 
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/four-steps-to-the-epiphany.jpg" %>
 <% end %>
 
-**What is it about?**
-
-**Why is this interesting?** 
-
-**A bit of backstory:** Steve Blank also has a really.
+Steve Blank also has a really [great blog](https://steveblank.com/) where he talks about startups and marketing. If you're planning a trip to San Francisco I highly recommend you check out [Steve's guide to Silicon Valley](https://steveblank.com/visitors-guide/).
 
 ### [The Beginning on Infinity - David Deutsch](https://www.amazon.com/gp/product/0670022756)
 
@@ -234,15 +186,16 @@ Rapidly prototyping ideas seems like a cool idea but it’s pretty hard to pull 
     <%= image_tag "21-startup-books-that-changed-the-way-i-think/the-beginning-of-infinity.jpg" %>
 <% end %>
 
-**What is it about?**
+How knowledge is created, what a good governance system is.
 
-**Why is this interesting?** 
+### [Essays by Paul Graham](http://paulgraham.com/articles.html)
 
-### [Various essays by Paul Graham](http://paulgraham.com/articles.html)
-http://paulgraham.com/ds.html
-http://paulgraham.com/growth.html
-http://paulgraham.com/talk.html
-http://paulgraham.com/really.html
-http://paulgraham.com/startuplessons.html
-http://paulgraham.com/love.html
+This isn't actually a book - but rather a collection of essays. Below are a few of his best essays:
 
+* [Do Things That Don't Scale](http://paulgraham.com/ds.html)
+* [Startup = Growth](http://paulgraham.com/growth.html)
+* [Write like you talk](http://paulgraham.com/talk.html)
+* [What Startups Are Really Like](http://paulgraham.com/really.html)
+* [The Hardest Lessons for Startups to Learn](http://paulgraham.com/startuplessons.html)
+
+It's also really worth checking out [YC Startup School](https://www.startupschool.org/?course=1) for more wisdom like this.
